# NeuronNet-1

./: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  TestNeuron  cmake_install.cmake  test1000_pars  test1000_traj
Testing/Temporary/: CTestCostData.txt
src/: network.cpp  random.cpp
